tests/rosetta/out/C/balanced-ternary.error
cc: exit status 1
/tmp/balanced-ternary.c: In function ‘btString’:
/tmp/balanced-ternary.c:134:37: error: incompatible types when initializing type ‘int’ using type ‘list_int’
  134 |           return (tmp_item_t){.bt = tmp7, .ok = 0};
      |                                     ^~~~
/tmp/balanced-ternary.c:140:10: error: incompatible types when returning type ‘tmp_item1_t’ but ‘int’ was expected
  140 |   return (tmp_item1_t){.bt = b, .ok = 1};
      |          ^
/tmp/balanced-ternary.c: In function ‘btInt’:
/tmp/balanced-ternary.c:187:9: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  187 |     b = 0;
      |         ^
/tmp/balanced-ternary.c: In function ‘mochi_main’:
/tmp/balanced-ternary.c:249:15: error: request for member ‘data’ in something not a structure or union
  249 |   int a = ares.data["bt"];
      |               ^
/tmp/balanced-ternary.c:252:15: error: request for member ‘data’ in something not a structure or union
  252 |   int c = cres.data["bt"];
      |               ^
/tmp/balanced-ternary.c:253:14: error: incompatible type for argument 2 of ‘show’
  253 |   show("a:", a);
      |              ^
      |              |
      |              int
/tmp/balanced-ternary.c:235:32: note: expected ‘list_int’ but argument is of type ‘int’
  235 | int show(char *label, list_int b) {
      |                       ~~~~~~~~~^
/tmp/balanced-ternary.c:255:14: error: incompatible type for argument 2 of ‘show’
  255 |   show("c:", c);
      |              ^
      |              |
      |              int
/tmp/balanced-ternary.c:235:32: note: expected ‘list_int’ but argument is of type ‘int’
  235 | int show(char *label, list_int b) {
      |                       ~~~~~~~~~^
/tmp/balanced-ternary.c:256:43: error: incompatible type for argument 1 of ‘btNeg’
  256 |   show("a(b-c):", btMul(a, btAdd(b, btNeg(c))));
      |                                           ^
      |                                           |
      |                                           int
/tmp/balanced-ternary.c:204:25: note: expected ‘list_int’ but argument is of type ‘int’
  204 | list_int btNeg(list_int b) {
      |                ~~~~~~~~~^
/tmp/balanced-ternary.c:256:25: error: incompatible type for argument 1 of ‘btMul’
  256 |   show("a(b-c):", btMul(a, btAdd(b, btNeg(c))));
      |                         ^
      |                         |
      |                         int
/tmp/balanced-ternary.c:222:25: note: expected ‘list_int’ but argument is of type ‘int’
  222 | list_int btMul(list_int a, list_int b) {
      |                ~~~~~~~~~^
