tests/rosetta/out/C/balanced-ternary.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:52Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:52Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
typedef struct {
  int bt;
  int ok;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  list_int bt;
  int ok;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

char *trimLeftZeros(char *s) {
  int i = 0;
  while (i < strlen(s) && slice_string(s, i, i + 1) == "0") {
    i = i + 1;
  }
  return slice_string(s, i, strlen(s));
}

int btString(char *s) {
  s = trimLeftZeros(s);
  list_int b = list_int_create(0);
  int i = strlen(s) - 1;
  while (i >= 0) {
    char *ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, "+") == 0)) {
      int tmp1_data[1];
      list_int tmp1 = {1, tmp1_data};
      tmp1.data[0] = 1;
      list_int tmp2 = concat_list_int(b, tmp1);
      b = tmp2;
    } else {
      if ((strcmp(ch, "0") == 0)) {
        int tmp3_data[1];
        list_int tmp3 = {1, tmp3_data};
        tmp3.data[0] = 0;
        list_int tmp4 = concat_list_int(b, tmp3);
        b = tmp4;
      } else {
        if ((strcmp(ch, "-") == 0)) {
          int tmp5_data[1];
          list_int tmp5 = {1, tmp5_data};
          tmp5.data[0] = 0 - 1;
          list_int tmp6 = concat_list_int(b, tmp5);
          b = tmp6;
        } else {
          list_int tmp7 = list_int_create(0);
          return (tmp_item_t){.bt = tmp7, .ok = 0};
        }
      }
    }
    i = i - 1;
  }
  return (tmp_item1_t){.bt = b, .ok = 1};
}

char *btToString(list_int b) {
  if (b.len == 0) {
    return "0";
  }
  char *r = "";
  int i = b.len - 1;
  while (i >= 0) {
    int d = b.data[i];
    if (d == 0 - 1) {
      char *tmp8 = concat_string(r, "-");
      r = tmp8;
    } else {
      if (d == 0) {
        char *tmp9 = concat_string(r, "0");
        r = tmp9;
      } else {
        char *tmp10 = concat_string(r, "+");
        r = tmp10;
      }
    }
    i = i - 1;
  }
  return r;
}

list_int btInt(int i) {
  if (i == 0) {
    list_int tmp11 = list_int_create(0);
    return tmp11;
  }
  int n = i;
  list_int b = list_int_create(0);
  while (n != 0) {
    int m = n % 3;
    n = (int)((((double)n) / ((double)3)));
    if (m == 2) {
      m = 0 - 1;
      n = n + 1;
    } else {
      if (m == 0 - 2) {
        m = 1;
        n = n - 1;
      }
    }
    b = 0;
  }
  return b;
}

int btToInt(list_int b) {
  int r = 0;
  int pt = 1;
  int i = 0;
  while (i < b.len) {
    r = r + b.data[i] * pt;
    pt = pt * 3;
    i = i + 1;
  }
  return r;
}

list_int btNeg(list_int b) {
  list_int r = list_int_create(0);
  int i = 0;
  while (i < b.len) {
    int tmp12_data[1];
    list_int tmp12 = {1, tmp12_data};
    tmp12.data[0] = (-b.data[i]);
    list_int tmp13 = concat_list_int(r, tmp12);
    r = tmp13;
    i = i + 1;
  }
  return r;
}

list_int btAdd(list_int a, list_int b) {
  return btInt(btToInt(a) + btToInt(b));
}

list_int btMul(list_int a, list_int b) {
  return btInt(btToInt(a) * btToInt(b));
}

char *padLeft(char *s, int w) {
  char *r = s;
  while (strlen(r) < w) {
    char *tmp14 = concat_string(" ", r);
    r = tmp14;
  }
  return r;
}

int show(char *label, list_int b) {
  char *l = padLeft(label, 7);
  char *bs = padLeft(btToString(b), 12);
  char *tmp15 = _str(btToInt(b));
  char *is = padLeft(tmp15, 7);
  char *tmp16 = concat_string(l, " ");
  char *tmp17 = concat_string(tmp16, bs);
  char *tmp18 = concat_string(tmp17, " ");
  char *tmp19 = concat_string(tmp18, is);
  printf("%s\n", tmp19);
}

int mochi_main() {
  int ares = btString("+-0++0+");
  int a = ares.data["bt"];
  list_int b = btInt((-436));
  int cres = btString("+-++-");
  int c = cres.data["bt"];
  show("a:", a);
  show("b:", b);
  show("c:", c);
  show("a(b-c):", btMul(a, btAdd(b, btNeg(c))));
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
